performed initial eda on the prioritization dataset, check for central tendency and distribution of the data

--- a/python/notebooks/prioritization_clean.ipynb
+++ b/python/notebooks/prioritization_clean.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "3b540d6d",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "e240c2d4",
    "metadata": {},
    "outputs": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "b0655d4d",
    "metadata": {},
    "outputs": [
@@ -263,7 +263,7 @@
        "4                                     81                           15.95%  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "6be9e17a",
    "metadata": {},
    "outputs": [],
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "17dc82dc",
    "metadata": {},
    "outputs": [],
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "4eb6e018",
    "metadata": {},
    "outputs": [],
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "a6003bf9",
    "metadata": {},
    "outputs": [],
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "7ff02964",
    "metadata": {},
    "outputs": [],
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "fee9aa41",
    "metadata": {},
    "outputs": [],
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "d0d3e225",
    "metadata": {},
    "outputs": [
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "4b747924",
    "metadata": {},
    "outputs": [
@@ -580,7 +580,7 @@
        "4  1.907056e+06   Brooklyn  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -591,23 +591,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "id": "ec31f57a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/h0/75t8pd8571n2l1zzjcyqp7kh0000gp/T/ipykernel_94056/3130188537.py:2: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  prioritization_clean['nta_id'] = prioritization_clean['nta']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# let's rename the 'nta' column to 'nta_id' for clarity and to match the naming convention of the other datasets we will be using for analysis\n",
     "prioritization_clean['nta_id'] = prioritization_clean['nta']"
@@ -615,29 +602,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 14,
    "id": "8410266e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/h0/75t8pd8571n2l1zzjcyqp7kh0000gp/T/ipykernel_94056/355653976.py:1: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  prioritization_clean.drop(columns=['nta'], inplace=True)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "prioritization_clean.drop(columns=['nta'], inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 15,
    "id": "f4784a5e",
    "metadata": {},
    "outputs": [],
@@ -648,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 16,
    "id": "699a09ee",
    "metadata": {},
    "outputs": [
@@ -686,8 +661,6 @@
        "      <th>weighted_score</th>\n",
        "      <th>latitude_generated</th>\n",
        "      <th>latitude_generated</th>\n",
-       "      <th>latitude_generated</th>\n",
-       "      <th>latitude_generated</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -706,8 +679,6 @@
        "      <td>8.2210</td>\n",
        "      <td>40.714789</td>\n",
        "      <td>40.714789</td>\n",
-       "      <td>40.714789</td>\n",
-       "      <td>40.714789</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -722,8 +693,6 @@
        "      <td>34</td>\n",
        "      <td>1.669389e+06</td>\n",
        "      <td>8.0704</td>\n",
-       "      <td>40.850930</td>\n",
-       "      <td>40.850930</td>\n",
        "      <td>40.850930</td>\n",
        "      <td>40.850930</td>\n",
        "    </tr>\n",
@@ -742,8 +711,6 @@
        "      <td>7.6866</td>\n",
        "      <td>40.830599</td>\n",
        "      <td>40.830599</td>\n",
-       "      <td>40.830599</td>\n",
-       "      <td>40.830599</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -760,8 +727,6 @@
        "      <td>7.3895</td>\n",
        "      <td>40.857729</td>\n",
        "      <td>40.857729</td>\n",
-       "      <td>40.857729</td>\n",
-       "      <td>40.857729</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -776,8 +741,6 @@
        "      <td>81</td>\n",
        "      <td>1.907056e+06</td>\n",
        "      <td>7.2775</td>\n",
-       "      <td>40.587225</td>\n",
-       "      <td>40.587225</td>\n",
        "      <td>40.587225</td>\n",
        "      <td>40.587225</td>\n",
        "    </tr>\n",
@@ -814,22 +777,15 @@
        "3                                     41  1.463457e+06          7.3895   \n",
        "4                                     81  1.907056e+06          7.2775   \n",
        "\n",
-       "   latitude_generated  latitude_generated  latitude_generated  \\\n",
-       "0           40.714789           40.714789           40.714789   \n",
-       "1           40.850930           40.850930           40.850930   \n",
-       "2           40.830599           40.830599           40.830599   \n",
-       "3           40.857729           40.857729           40.857729   \n",
-       "4           40.587225           40.587225           40.587225   \n",
-       "\n",
-       "   latitude_generated  \n",
-       "0           40.714789  \n",
-       "1           40.850930  \n",
-       "2           40.830599  \n",
-       "3           40.857729  \n",
-       "4           40.587225  "
+       "   latitude_generated  latitude_generated  \n",
+       "0           40.714789           40.714789  \n",
+       "1           40.850930           40.850930  \n",
+       "2           40.830599           40.830599  \n",
+       "3           40.857729           40.857729  \n",
+       "4           40.587225           40.587225  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -840,12 +796,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 17,
    "id": "a9b90bf1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "prioritization_clean.to_csv('/Users/Marcy_Student/Desktop/Food Insecurity Analysis/datasets/cleaned/cleaned_neighborhood_prioritization.csv', index=False)"
+    "# prioritization_clean.to_csv('/Users/Marcy_Student/Desktop/Food Insecurity Analysis/datasets/cleaned/cleaned_neighborhood_prioritization.csv', index=False)"
    ]
   }
  ],
