last update with summary of main take aways and justifications

--- a/python/notebooks/eda/neighborhood_prioritization_eda_ibrahima.ipynb
+++ b/python/notebooks/eda/neighborhood_prioritization_eda_ibrahima.ipynb
@@ -1279,40 +1279,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "1489b15f",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Exploratory Data Analysis Report\n",
-      "\n",
-      "1. Data Overview:\n",
-      "The dataset contains 197 rows and 13 columns.\n",
-      "The columns include 'neighborhood', 'weighted_score', 'food_insecure_percentage', 'supply_gap', 'unemployment_rate', 'vulnerable_population_percentage', and 'unemployment_rate'.\n",
-      "There are no missing values in the dataset, and there are no duplicate rows.\n",
-      "\n",
-      "2. Summary Statistics:\n",
-      "       weighted_score  food_insecure_percentage    supply_gap  unemployment_rate  vulnerable_population_percentage  unemployment_rate\n",
-      "count      197.000000                197.000000  1.970000e+02         197.000000                        197.000000         197.000000\n",
-      "mean         5.414561                 16.519289 -1.976900e+04           7.682386                         15.842386           7.682386\n",
-      "std          1.021824                  6.620541  1.100397e+06           2.977905                          5.602104           2.977905\n",
-      "min          1.667900                  2.920000 -4.606012e+06           1.380000                          7.040000           1.380000\n",
-      "25%          4.911100                 11.790000 -3.097622e+05           5.470000                         12.390000           5.470000\n",
-      "50%          5.478200                 15.210000  2.561395e+05           7.170000                         14.810000           7.170000\n",
-      "75%          6.058400                 19.880000  5.894113e+05           9.060000                         17.840000           9.060000\n",
-      "max          8.221000                 35.990000  2.776626e+06          17.000000                         39.690000          17.000000\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(report)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 32,
    "id": "i5e148fh9u",
    "metadata": {},
@@ -1495,13 +1461,12 @@
     "## 3. Weighted Score Decomposition & Priority Tier Analysis\n",
     "The `weighted_score` is the composite metric used to rank neighborhoods. We need to understand:\n",
     "- Which input variables drive it most?\n",
-    "- Can we identify natural breakpoints (tiers) for prioritization?\n",
-    "- Are there neighborhoods that score high on one dimension but low on others (mismatches)?"
+    "- Can we identify natural breakpoints (tiers) for prioritization?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "uzssrovqa1m",
    "metadata": {},
    "outputs": [
@@ -1509,13 +1474,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "=== Component Correlations with Weighted Score ===\n",
+      "Component Correlations with Weighted Score\n",
       "  food_insecure_percentage                       r = +0.5121  (p = 1.45e-14)\n",
       "  unemployment_rate                              r = +0.3034  (p = 1.46e-05)\n",
       "  vulnerable_population_percentage               r = +0.1895  (p = 7.65e-03)\n",
       "  supply_gap                                     r = +0.8401  (p = 1.04e-53)\n",
       "\n",
-      "=== Standardized Correlation (proxy for relative weight) ===\n",
+      "Standardized Correlation (proxy for relative weight)\n",
       "  food_insecure_percentage                       +0.5121\n",
       "  unemployment_rate                              +0.3034\n",
       "  vulnerable_population_percentage               +0.1895\n",
@@ -1538,7 +1503,7 @@
     "from scipy import stats\n",
     "\n",
     "# Correlations of each component with weighted_score\n",
-    "print(\"=== Component Correlations with Weighted Score ===\")\n",
+    "print(\"Component Correlations with Weighted Score\")\n",
     "components = ['food_insecure_percentage', 'unemployment_rate', \n",
     "              'vulnerable_population_percentage', 'supply_gap']\n",
     "for col in components:\n",
@@ -1554,7 +1519,7 @@
     "    columns=components\n",
     ")\n",
     "r_values = X_scaled.corrwith(pd.Series(scaler.fit_transform(df[['weighted_score']]).flatten()))\n",
-    "print(\"\\n=== Standardized Correlation (proxy for relative weight) ===\")\n",
+    "print(\"\\nStandardized Correlation (proxy for relative weight)\")\n",
     "for col, r in r_values.items():\n",
     "    print(f\"  {col:45s}  {r:+.4f}\")\n",
     "\n",
@@ -1739,13 +1704,105 @@
     "\n",
     "\n",
     "**D. Supply Gap Deep Dive**\n",
-    "- The supply gap is not evenly distributed by borough. Brooklyn and Queens have more neighborhoods with food surpluses (negative supply gap), while the Bronx and Manhattan tend toward demand gaps (positive).\n",
+    "- The supply gap is not evenly distributed by borough. Brooklyn and Queens have more neighborhoods with food surpluses (negative supply gap), while the Bronx and Manhattan tend toward demand gaps (positive).\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7gqrwudl4sg",
+   "metadata": {},
+   "source": [
+    "---\n",
     "\n",
-    "### 3. Next Step\n",
-    "1. **Merge with EFAP data**: The most impactful next analysis is to join this prioritization dataset with the EFAP site counts per NTA (from Ayema's analysis) to create a **coverage ratio** (food sites per unit of need). This directly addresses the project's core research question.\n",
-    "2. **Merge with shelter census data**: Join with Angel's shelter census analysis at the CDTA level to test whether neighborhoods with high shelter populations are also high-priority for food insecurity.\n",
-    "3. **Multicollinearity check**: Before building any regression model, compute **Variance Inflation Factors (VIF)** like unemployment and food insecurity may be too correlated to include simultaneously as predictors.\n",
-    "4. "
+    "# Main Takeaways & Justification\n",
+    "\n",
+    "## Neighborhood Prioritization EDA — Final Synthesis\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### Takeaway 1: The Bronx Leads Every Negative Indicator and Is the Most Food-Insecure Borough\n",
+    "\n",
+    "The borough aggregation table shows the Bronx with the highest mean food insecurity (23.3%), the highest mean unemployment (11.2%), and a positive mean supply gap (+146,959) — meaning demand outpaces available food supply on average. The top 10 most food-insecure neighborhoods list is dominated by Bronx NTAs: West Farms (34.4%), Belmont (33.9%), Highbridge (32.1%), Claremont Village (31.6%), Mott Haven-Port Morris (31.4%), and Tremont (31.3%) all appear. Staten Island sits at the opposite end with the lowest mean food insecurity (11.3%) and unemployment (5.6%).\n",
+    "\n",
+    "**Justification:** The bar chart of average food insecurity by borough confirms this visually — the Bronx is the only borough substantially above the citywide average line. The KDE overlay further shows the Bronx distribution is shifted rightward and barely overlaps with Staten Island's, meaning these two boroughs occupy nearly distinct ranges of food insecurity. However, the borough aggregation also reveals that the Bronx's standard deviation (6.50) is the highest, meaning even within the Bronx, neighborhood-level conditions vary considerably. Borough-level policy targeting alone would be too coarse.\n",
+    "\n",
+    "**Statistical validation needed:** Kruskal-Wallis test across boroughs followed by Dunn's post-hoc with Bonferroni correction to confirm that the Bronx is statistically distinct, not just descriptively higher.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### Takeaway 2: Unemployment and Food Insecurity Are Correlated — But the Relationship Is Moderate\n",
+    "\n",
+    "The scatter plot of unemployment vs. food insecurity shows a clear positive trend line, and the correlation heatmap confirms a Pearson r of approximately 0.49. This means unemployment explains only about 25% of the variance in food insecurity. The top 10 list reveals clear exceptions: East Williamsburg (Brooklyn) ranks #1 in food insecurity at 36.0% but has an unemployment rate of only 6.38%. Midtown-Times Square has 33.5% food insecurity with only 5.77% unemployment. Glen Oaks-Floral Park (Queens) has 31.1% food insecurity with just 4.19% unemployment.\n",
+    "\n",
+    "**Justification:** These outliers visible in the scatter plot prove that food insecurity is driven by other factors beyond employment. \n",
+    "\n",
+    "**Statistical validation needed:** Spearman rank correlation (given non-normality confirmed by Shapiro-Wilk tests) with bootstrap confidence interval to quantify the true monotonic association and its uncertainty.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### Takeaway 3: The Weighted Score Is Driven Primarily by Food Insecurity and Supply Gap — Vulnerable Population Appears Underweighted\n",
+    "\n",
+    "The weighted score decomposition shows that `food_insecure_percentage` and `supply_gap` have the strongest Pearson correlations with `weighted_score`, while `vulnerable_population_percentage` and `unemployment_rate` contribute less. The borough aggregation confirms that Queens has the highest mean vulnerable population rate (18.3%) across all five boroughs — yet Queens' mean weighted score is not proportionally elevated. Only two Queens neighborhoods appear in the top 10 most food-insecure list.\n",
+    "\n",
+    "**Justification:** The standardized correlation analysis confirms the same ordering. If the prioritization index is intended to identify neighborhoods where need is greatest across all dimensions, then a composite score that effectively downweights the population most likely to be affected may systematically deprioritize Queens neighborhoods. This is a consideration worth surfacing to our stakeholders.\n",
+    "\n",
+    "**Statistical validation needed:** Multiple linear regression with standardized coefficients (`weighted_score ~ food_insecure_percentage + unemployment_rate + vulnerable_population_percentage + supply_gap`) to quantify each component's actual weight in the formula, plus Variance Inflation Factor (VIF) to check if unemployment and food insecurity are too collinear to include together.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### Takeaway 4: The Supply Gap Is Bimodal — The Citywide Mean of Near-Zero Masks a Borough-Specific Split\n",
+    "\n",
+    "The supply gap histogram shows a bimodal distribution with a positive median (~256K) but a near-zero mean (-19,769). The supply gap direction analysis reveals this is not random: Brooklyn and Queens have more neighborhoods with food surpluses (negative supply gap), while the Bronx and Manhattan lean toward demand gaps (positive). The scatter plots show that supply gap correlates positively with both food insecurity and weighted score, confirming that neighborhoods with larger demand deficits are appropriately flagged as higher priority.\n",
+    "\n",
+    "**Justification:** The extreme range of the supply gap (-4.6 to +2.8) dwarfs all other variables in magnitude. The correlation analysis shows supply gap has a moderate positive relationship with the weighted score, meaning it meaningfully influences prioritization. But its raw scale means it could dominate distance-based or regression-based models. Any downstream modeling should apply a transformation (e.g., signed log: `sign(x) * log(1 + |x|)`) to prevent scale dominance while preserving directionality.\n",
+    "\n",
+    "**Statistical validation needed:** Spearman correlation between supply gap and food insecurity + quantile regression at the 25th, 50th, and 75th percentiles to test whether the relationship holds across the full distribution or only at the extremes.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### Takeaway 5: Most Variables Fail Normality — All Downstream Analysis Must Use Non-Parametric Methods\n",
+    "\n",
+    "The Shapiro-Wilk tests show that most key variables reject the null hypothesis of normality (p < 0.05). The Q-Q plots confirm deviations at the tails — food insecurity and unemployment are right-skewed (the histograms show long right tails), and supply gap departs from normality due to its bimodal shape. Only `weighted_score` approaches normality, likely because the composite formula smooths out individual variable skewness.\n",
+    "\n",
+    "**Justification:** This finding directly constrains every statistical test and model the project can use. Pearson correlations, standard t-tests, and one-way ANOVA all assume normally distributed data. Since this assumption is violated, the project must use: Spearman correlations instead of Pearson, Mann-Whitney U instead of t-tests, Kruskal-Wallis instead of ANOVA, and robust or quantile regression instead of OLS. Ignoring non-normality would produce unreliable p-values and potentially invalid conclusions.\n",
+    "\n",
+    "**Statistical validation needed:** Anderson-Darling test (more sensitive at the tails than Shapiro-Wilk) to double-confirm, plus Ramsey RESET test for functional form specification in any regression model.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### Takeaway 6: Non-Linear Relationships Exist Between Vulnerable Population and Both Food Insecurity and Unemployment\n",
+    "\n",
+    "The Spearman vs. Pearson comparison table flagged two variable pairs with a meaningful gap (>0.05) between Spearman and Pearson correlations: food insecurity vs. vulnerable population (gap = +0.116) and unemployment vs. vulnerable population (gap = +0.125). Both were flagged as \"LIKELY\" non-linear. All other variable pairs showed negligible differences, meaning their relationships are approximately linear.\n",
+    "\n",
+    "**Justification:** A Spearman correlation that substantially exceeds the Pearson correlation indicates a monotonic but curved relationship — the variables track together, but not at a constant rate. This likely reflects a threshold effect: vulnerability has little impact on food insecurity at low levels, but accelerates it beyond a certain point. A standard linear regression would underestimate these associations. Any multivariate model should include polynomial terms or interaction terms (e.g., `unemployment * vulnerable_population_percentage`) to capture this non-linearity.\n",
+    "\n",
+    "**Statistical validation needed:** Polynomial regression or generalized additive model (GAM) to capture the curve, tested against a linear baseline using likelihood ratio or AIC comparison.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Summary Table: Claims and Required Tests\n",
+    "\n",
+    "| Claim from EDA | Recommended Test | Rationale |\n",
+    "|----------------|-----------------|-----------|\n",
+    "| Bronx has significantly higher food insecurity than other boroughs | Kruskal-Wallis + Dunn's post-hoc | Non-parametric ANOVA; normality assumption fails |\n",
+    "| Unemployment and food insecurity are positively associated | Spearman rank correlation + bootstrap CI | Monotonic correlation robust to skewed distributions |\n",
+    "| Weighted score underweights vulnerable population | Multiple regression with standardized betas + VIF | Quantifies each component's contribution; checks multicollinearity |\n",
+    "| Supply gap distribution is bimodal, not normal | Anderson-Darling test | Tail-sensitive normality test for the most skewed variable |\n",
+    "| Supply gap relates to food insecurity across the distribution | Quantile regression (25th, 50th, 75th percentiles) | Tests whether the association holds at extremes, not just the mean |\n",
+    "| Data violates normality assumptions for parametric tests | Shapiro-Wilk (done) + Anderson-Darling | Confirms non-parametric methods are required project-wide |\n",
+    "| Vulnerable population has a non-linear effect | GAM or polynomial terms + AIC comparison | Captures threshold/saturation effects missed by linear models |\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Next Steps: Integration The 2 Other Datasets\n",
+    "\n",
+    "This EDA established which neighborhoods are in greatest need and what drives that need. The next analytical priorities are:\n",
+    "\n",
+    "1. **Merge with EFAP data (Ayema):** Join EFAP site counts per NTA with this prioritization data to compute a coverage ratio (food sites per unit of need) — directly answering the project's core research question.\n",
+    "\n",
+    "2. **Merge with shelter census data (Angel):** Join at the CDTA-to-NTA level to test whether shelter-dense neighborhoods are also high-priority for food insecurity.\n",
+    "\n",
+    "3. **Multicollinearity check:** Compute VIF before any regression — unemployment and food insecurity (r ≈ 0.49) may be too correlated to include as simultaneous predictors.\n"
    ]
   }
  ],
