Ibrahima: Last update on the Neighborhood dataset's EDA

--- a/python/notebooks/eda/neighborhood_prioritization_eda_ibrahima.ipynb
+++ b/python/notebooks/eda/neighborhood_prioritization_eda_ibrahima.ipynb
@@ -1704,7 +1704,7 @@
     "\n",
     "\n",
     "**D. Supply Gap Deep Dive**\n",
-    "- The supply gap is not evenly distributed by borough. Brooklyn and Queens have more neighborhoods with food surpluses (negative supply gap), while the Bronx and Manhattan tend toward demand gaps (positive).\n"
+    "- The supply gap is not evenly distributed by borough. Brooklyn and Queens have more neighborhoods with food surpluses (negative supply gap), while the Bronx and Manhattan tend toward demand gaps (positive)."
    ]
   },
   {
@@ -1804,6 +1804,12 @@
     "\n",
     "3. **Multicollinearity check:** Compute VIF before any regression — unemployment and food insecurity (r ≈ 0.49) may be too correlated to include as simultaneous predictors.\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3d0b7c84",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
